--- a/packages/resilience/package.json
+++ b/packages/resilience/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "types": "src/index.ts",
   "scripts": {
-    "build": "bun build src/*.ts --outdir dist --target node --external bun",
+    "build": "bun build src/index.ts --outdir dist --target node --external bun --external @loopwork-ai/contracts",
     "test": "bun test"
   },
   "peerDependencies": {
